--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/api/"
+  "proxy": "https://lamadev-mern-blog-website-deploy-test.vercel.app/api/"
 }
